# gdictate

./: .gitignore  README.md  TODO.md  gdictate.py  index.html  install.sh  overlay.py  package-lock.json  package.json  requirements-batch.txt  requirements-legacy-ui.txt  requirements.txt  speech-proxy.html  vite.config.ts
.github/workflows/: pages.yml  release.yml
docs/: index.html
gdictate_core/: __init__.py  app.py  audio.py  chrome.py  cli.py  constants.py  desktop.py  engines.py  file_jobs.py  hotkeys.py  install_assets.py  ipc.py  models.py  paste.py  platforms.py  preflight.py  settings.py  shortcuts.py
scripts/: bootstrap-linux.sh  bootstrap-windows.ps1  package-arch.sh  prepare-resources.mjs
src/: App.tsx  styles.css
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  settings.rs  system.rs
tests/: test_core_smoke.py  test_performance_smoke.py
